# PriceIndices

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  LICENSE.txt  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
PriceIndices/: __init__.py  crypto_history.py  price_indicators.py
PriceIndices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_extraction.py  test_price_indices.py
