[tool.poetry]
name = "PriceIndices"
version = "1.4.0"
description = "A python package to get historical market data of cryptocurrencies, and calculate & plot different price technical indicators."
authors = ["Dayal Chand Aichara <dcaichara@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "PriceIndices"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.4.0"
numpy = "^1.24.1"
matplotlib = "^3.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "^0.942"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"
pytest-sugar = "^0.9.4"
pyproject-flake8 = "^0.0.1-alpha.2"
isort = "^5.10.1"
ipython = "^8.2.0"
types-requests = "^2.27.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist)/'''

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length=80
max-complexity=20
ignore="W503, E203"
exclude = "__init__.py"
per-file-ignores = """"""
inline-quotes = '"'

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = "ignore::UserWarning"
addopts = "tests"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 80